Atualiza seções início e sobre

--- a/index.html
+++ b/index.html
@@ -30,14 +30,26 @@
     </div>
   </header>
 
-  <section id="inicio">
-    <h2>Início</h2>
-    <p>Frase de impacto aqui.</p>
+  <section id="inicio" class="dupla">
+    <div class="imagem">
+      <img src="images/papel 1.jpg" alt="Imagem de abertura">
+    </div>
+    <div class="texto">
+      <h2>Realçando sua beleza com sofisticação e carinho.</h2>
+      <p>Seja bem-vinda ao espaço onde cada detalhe é pensado para valorizar o seu momento. A maquiagem é mais do que aparência — é identidade, estilo e emoção.</p>
+      <a href="#agenda" class="btn">Agende seu horário</a>
+    </div>
   </section>
 
-  <section id="sobre">
-    <h2>Sobre</h2>
-    <p>Texto sobre a maquiadora aqui.</p>
+  <section id="sobre" class="dupla invertida">
+    <div class="texto">
+      <h2>Sobre Mim</h2>
+      <p>Olá! Eu sou Wannessa Amorim, maquiadora especializada em realçar a beleza feminina com leveza, elegância e personalidade.</p>
+      <p>Com experiência em maquiagem social, premium e penteados, atendo em estúdio e também em domicílio, levando conforto e qualidade até você.</p>
+    </div>
+    <div class="imagem">
+      <img src="images/eu.jpg" alt="Foto de Wannessa Amorim">
+    </div>
   </section>
 
   <section id="servicos">
